--- a/css/connect.css
+++ b/css/connect.css
@@ -1,11 +1,12 @@
 * {
-    font-family: Arial;
+    font-family:Goudy Old Style, Garamond, Big Caslon, Times New Roman, serif;
   }
   
   body {
     display: block;
     background: #000000;
     margin:0%;
+    
   }
 
 
@@ -16,6 +17,7 @@
 .title{
     text-align: center;
     color: #bb4141;
+    font-family:cursive;
   }
   .bx-img{
     display: flex;
@@ -41,18 +43,19 @@
     padding: 20px;
     margin-left: 50%;
     margin-right: 10%; 
-    font-family: Rockwell, Courier Bold, Courier, Georgia, Times, Times New Roman, serif;
+    
     left: 150px;
   }
   
   /*Identification (Page de connexion Auré)*/
   .LogoCentre{
-    margin: 75px 0px 50px;
+    margin: 40px 0px 20px;
     text-align: center;
+    margin-bottom: -10px;
   }
   
   .LogoCentre img {
-    width: 115px;
+    width: 150px;
   
   }
   
@@ -60,10 +63,8 @@
     margin: 50px 0px 50px;
     /* The image used */
     background-image: url("photographer.jpg");
+   
     
-    /* Add the blur effect */
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
     
     /* Full height */
     height: 100%; 
@@ -73,30 +74,34 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  
   
   .Bloc{
     background-color: white;
-    width: 45%;
+    width: 30%;
     padding: 30px;
-    border-radius: 5%;
+    border-radius: 1%;
     margin: auto;
     overflow: hidden;
     box-shadow: 0 4px 8px 0 #222, 0 6px 20px 0 #b8b8b8;
     display: block;
     z-index: 2;
     position: relative;
+    padding-top: 5px;
   
   }
   
   .Bloc div {
     text-align: center;
     display: block;
-    margin-bottom: 15px;
+    margin-bottom: -6px;
+    
   }
   
   .Bloc div img {
-    width: 100px;
-    height: 100px;
+    width: auto;
+    height: 50px;
   }
   
   /*                   Checkbox (option unique)              */
@@ -112,6 +117,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    
   }
   
   /* Hide the browser's default radio button */
@@ -168,13 +174,19 @@
     background-color: #bb4141;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 1px 2px;
     cursor: pointer;
+    border-radius: 8px;
+    
+  }
+
+  .button:hover{
+    background-color: #450404;
   }
   
 
@@ -201,7 +213,6 @@ font-size:16px;
 
 .footer-dark .item.text h3{
 margin-bottom:6px;
-margin-top: 200px;
 }
 
 
