--- a/css/index-style.css
+++ b/css/index-style.css
@@ -2,7 +2,7 @@
 
 /*               Restriction general de tag                      */
 * {
-  font-family: Arial;
+  font-family: Candara, Calibri, Segoe, Segoe UI, Optima, Arial, sans-serif;
 }
 
 body {
