--- a/css/connect.css
+++ b/css/connect.css
@@ -1,5 +1,8 @@
 * {
-    font-family:Goudy Old Style, Garamond, Big Caslon, Times New Roman, serif;
+    font-family: Candara, Calibri, Segoe, Segoe UI, Optima, Arial, sans-serif;
+    /*Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
+    Candara, Calibri, Segoe, Segoe UI, Optima, Arial, sans-serif;
+    Goudy Old Style, Garamond, Big Caslon, Times New Roman, serif;*/
   }
   
   body {
