--- a/css/client-chauffeur_style.css
+++ b/css/client-chauffeur_style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Arial;
+    font-family: Candara, Calibri, Segoe, Segoe UI, Optima, Arial, sans-serif;
 }
 body{
  background: #000000;
@@ -269,7 +269,7 @@ input[type=submit]:hover {
   
   .footer-dark .item.text h3{
     margin-bottom:6px;
-    margin-top: 200px;
+    margin-top: 30px;
   }
   
   
