--- a/css/index-style.css
+++ b/css/index-style.css
@@ -232,17 +232,17 @@ section{
 
 /* Column droite gauche*/
 .rightcolumn {
+  text-align: center;
   float: right;
   width: 40%;
   padding-left: 20px;
-  text-align: left;
 }
 
 .leftcolumn {
   float: left;
   width: 40%;
   padding-left: 20px;
-  text-align: right;
+  text-align: center;
 }
 
 /* Images dans les colones*/
