--- a/css/client-chauffeur_style.css
+++ b/css/client-chauffeur_style.css
@@ -26,7 +26,7 @@ form {
 }
 
 /* Full-width inputs */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email], input[type=datetime-local], input[type="file"] {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
