--- a/css/index-style.css
+++ b/css/index-style.css
@@ -13,7 +13,6 @@ body {
 
 .header {
   padding: none;
-  text-align: center;
   padding-left: 120px;
   padding-right: 120px;
 }
@@ -21,6 +20,7 @@ body {
 .header h1 {
   font-size: 50px;
   color: white;
+  text-align: center;
 }
 
 .header p {
@@ -166,14 +166,55 @@ section{
 
 }
 
-.header p{
+.header h2{
+  color:white;
+}
+
+#trajet{
   display: block;
+  position: relative;
   font-weight: bold;
   color:black;
   padding: 15px 32px;
-  background-color: none;
+  background-color: white;
   border-radius: 15px;
 }
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+.container {
+  border-radius: 5px;
+  background-color: white;
+  padding: 20px;
+  display: block;
+  padding: 15px 32px;
+  position: relative;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
 
 /*                                          Body                                              */
 /* Colones par couleur */
@@ -271,6 +312,58 @@ section{
   content: "";
   display: table;
   clear: both;
+}
+
+input[type=text], input[type=password], input[type=email], input[type=datetime-local], input[type="file"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+ }
+ 
+ /* Set a style for all buttons */
+ input[type=submit] {
+  background-color: rgb(205, 50, 50);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+ }
+ input[type=submit]:hover {
+  background-color: #ff000076;
+  color: white;
+  border: 1px solid #ff000076;
+ }
+
+ input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: rgb(205, 50, 50);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: #ff000076;
 }
 
 /* Boutons interactifs redirige vers des pages */
